--- a/src/app/shared/piechart/piechart.component.html
+++ b/src/app/shared/piechart/piechart.component.html
@@ -1,3 +1,3 @@
-<div class="container-fluid pieChart card shadow-lg border-1 m-3">
- <div [chart]="chart" ></div>
+<div class=" commoncard   shadow-lg border-1 m-3 ">
+ <div class="" [chart]="chart" ></div>
 </div>
