--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
-    <div class="col-lg-12">
-        <div class="container-fluid ">
-                <app-header></app-header>
-          </div>
-    </div>
-    <div class="col-lg-12">
-<main class="d-flex">
-    <app-sidenav></app-sidenav>
-    <div class="container-fluid ">
-        <router-outlet></router-outlet>
-    </div>
-</main>
-    </div>
+<div class="mt-5 bg">
+      <div class="container-fluid">
+        <app-header></app-header>
+      </div>
+  
+   <div class="d-flex">
+      <div class="w-50  fixed-top z-1 mt-5">
+        <app-sidenav ></app-sidenav>
+      </div>
+      <div class="container-fluid flex-grow-1" [ngClass]="{'largewidth': isSidebarOpen, 'smallwidth': !isSidebarOpen}"  >
+          <router-outlet></router-outlet>
+      </div>
+   </div>
+  </div>
+  
