--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,6 @@
-    <!-- <nav class="navbar navbar-dark bg-dark">
-         
-           <div class="col-8">
-            <img src="" alt="" srcset="">
-           </div>
-    </nav> -->
-
-    
-<nav class="navbar navbar-expand-lg navbar-dark d-flex justify-content-between bg-dark">
+<nav class="fixed-top navbar navbar-expand-lg navbar-dark d-flex justify-content-between bg-dark">
        <div class=" d-flex mx-3 navbar-btn" type="button"  (click)="toggleSidenav($event)">
-        <span class=" navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
         <div class="mx-3">
             <a class="navbar-brand" href="#">
                 <!-- Your brand logo or text -->
@@ -18,13 +10,13 @@
     </div>
      
     <div>
-        <ul class="d-flex justify-content-between text-center right-nav-item">
+        <ul class="d-flex justify-content-between text-center right-nav-item ">
             <li class="nav-item ">
                 <a class="nav-link" href="#">
                 <i class="fas fa-cogs"></i> 
                 </a>
             </li>
-            <li class="nav-item mx-3 ">
+            <li class="nav-item mx-3">
                 <span class="position-absolute top-10 mx-3 end-10  badge  bg-secondary rounded-pill bg-danger">
                     99+
                   </span>
@@ -34,8 +26,8 @@
                 </a>
             </li>
             <!-- pic -->
-            <li class="nav-item mx-3"> 
-                <img src="" class=" rounded-circle" height="30" width="30" alt="" srcset="">
+            <li class="nav-item mx-3 "> 
+                <img src="../assets/images/download.png" class=" rounded-circle" height="30" width="30" alt="" srcset="">
             </li>
         </ul>
     </div>
