--- a/src/app/main-body/main-body.component.html
+++ b/src/app/main-body/main-body.component.html
@@ -1,2 +1,39 @@
-
-<app-piechart [height]="325"></app-piechart>
+<div >
+<div class="container-fluid d-lg-flex w-100">
+    <app-piechart ></app-piechart>
+    <app-weather-chart></app-weather-chart>
+    </div>
+        <div class="card border-0 mx-4 shadow-lg mt-auto">
+            <table class="table ">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Larry</td>
+                    <td>the Bird</td>
+                    <td>@twitter</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+   
+</div>
