--- a/src/app/shared/weather-chart/weather-chart.component.html
+++ b/src/app/shared/weather-chart/weather-chart.component.html
@@ -1,1 +1,26 @@
-<p>weather-chart works!</p>
+ <div class="card shadow-lg border-1 m-3 " >
+   <div class="card-body d-flex ">
+    <div class="left d-block mt-2">
+       <span class="d-flex "> 
+        <h6 class="text-muted mb-1   ">Sales Weekly  </h6>
+        <i class="fas fa-question-circle mx-1 "></i>
+    </span>
+        <span><h2 class="text-muted "> <i class="fa  fa-dollar" ></i>450
+        </h2>
+        <span class="badge bg-success rounded-pill ">+3.5%</span>
+
+        </span>
+    </div>
+    <div class="right mt-auto">
+          <div class="progress d-flex">
+            <div class="progress-bar bg-info py-2" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+    </div>
+   </div>
+ </div>
