--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -1,8 +1,18 @@
 *{
-    color: white;
 } 
 .ease{
-    transition: width 0.2s;
+    transition: width 0.3s;
+}
+.easeheight{
+    transition: height 0.2s;
+
+}
+a:focus{
+    color: white!important;
+    background-color: black
+}
+a,a:visited,a:active{
+    color:inherit;
 }
 .h-100{
     position: relative;
@@ -13,7 +23,7 @@
 }
 .largewidth{
     height: 100vh!important;
-    width: 8rem;
+    width: 14rem;
 }
 .nav-item,.dropdown-item{
     font-size: small;
@@ -24,18 +34,19 @@
 }
 
 .sidenavTab a:hover i {
-    color: black;
+    color: white;
 }
 
 .nav-link:hover p{
     color: black;
 }
-.sidenavTab a:hover {
-    background-color: white;
-    color: black;
+.sidenavTab a:hover ,.sidenavTab a:hover p {
+    background-color: black;
+    color: white !important;
     transition: color 0.3s ease, background-color 0.3s ease; /* Add transition for smooth effect */
 
 }
+
 p{
     align-items: center;
     line-height: normal;
@@ -46,5 +57,15 @@ p{
     color: white;
 }
 .sidenavTab{
-    overflow-y: hidden!important;
+    overflow-y: auto;
+    overflow-x: hidden!important;
+    
+    /* overflow-y: hidden!important;
+    height:00vh */
+}
+.bg{
+    background-color: white
+}
+.submenu{
+    margin-left: 27px;
 }
